fixed horizontal scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,7 @@ main {
 #NodeJS_REST_API img.login-signup {
   width: 80%;
 }
+
+#NodeJS_REST_API p{
+  
+}
